# Z-AI-games

./: .env.example  .gitignore  AGENT_BLOCKERS.md  AGENT_DECISIONS.md  AGENT_LOG.md  AGENT_STATUS.md  AGENT_TODO.md  Prompt.txt  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  nightly-e2e.yml
.mimocode/: .cron-lock  STATE.md
.mimocode/plans/: 1782999974551-witty-cabin.md
ai-context/: LOAD_RULES.md  PROJECT_MEMORY.md  PROMPT_TEMPLATES.md  README.md  RUNBOOKS.md  SKILLS_INDEX.md  TOKEN_POLICY.md
apps/control-center/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
config/: default.yaml
data/replays/: replay-01736311.jsonl  replay-03009da3.jsonl  replay-05dd3f88.jsonl  replay-08c0cf0f.jsonl  replay-0a7b519b.jsonl  replay-0b03ca04.jsonl  replay-0fa4c11e.jsonl  replay-1063c536.jsonl  replay-10e78e25.jsonl  replay-15d0750f.jsonl  replay-1ab3873a.jsonl  replay-1ac2cf7f.jsonl  replay-1ad1fb37.jsonl  replay-1b580eb8.jsonl  replay-1fe970f7.jsonl  replay-20a0394c.jsonl  replay-20f09992.jsonl  replay-2334c826.jsonl  replay-23757977.jsonl  replay-283962da.jsonl  replay-2dada269.jsonl  replay-2f5b04ac.jsonl  replay-3284af06.jsonl  replay-37103959.jsonl  replay-3d00a05b.jsonl  replay-3e02338b.jsonl  replay-40a60532.jsonl  replay-42197d25.jsonl  replay-433301bd.jsonl  replay-462d41ed.jsonl  replay-46f11a67.jsonl  replay-47ec106d.jsonl  replay-4a14687a.jsonl  replay-4c9c820c.jsonl  replay-4cb935f0.jsonl  (+70 more)
docs/: PROJECT_OVERVIEW.md  ROADMAP.md  USAGE.md
graphify-out/: .graphify_detect.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: _profile_health_ops.py  _verify_trace.py  benchmark-run.py  calibrate-scuffed-uno-web.py  calibrate_draw_target.py  capture-web-fixture.py  capture-windows-fixture.py  check-web-reachability.py  check_cdp.py  dev-backend.ps1  dev-desktop.ps1  diagnose-scuffed-uno-web.py  e2e-trace.py  evaluate-full-operator.py  find-selectors.py  generate-service-readmes.py  inspect-game-dom.py  inspect-pizzuno-dom.py  inspect-pizzuno-game.py  inspect-uno-site.py  inspect-unoonline-game.py  live_proof_final.py  model-health.py  nightly-profile-smoke.py  orchestrator-debug.py  orchestrator-status.py  profile-health-alerts.py  profile-health-history.py  profile-health-summary.py  registry-status.py  run-tests.ps1  run-windows-agent.py  serve-test-target.py  setup-windows.ps1  smoke-check.ps1  start-orchestrator-session-web.py  start-orchestrator-session-windows.py  stop-backend.ps1  trace-web-attach-diagnostics.py  trace_uno_callback.py  (+4 more)
services/adapter-web/: README.md  pyproject.toml
services/adapter-web/profiles/: local-mock-uno.json  pizz-uno-web.json  real-unoh-web.json  scuffed-uno-web.json
services/adapter-web/src/uno_adapter_web/: action_verification.py  agent_trace.py  api.py  canvas_coords.py  coordinate_reliability.py  extraction.py  gesture_planner.py  hand_detection.py  health_store.py  main.py  mock_adapter.py  navigation_diagnostics.py  playwright_adapter.py  profile_alerts.py  profile_health.py  profile_metrics.py  profiles.py  registry.py  runtime.py  selector_resolver.py  startup.py  temporal_consistency.py
services/adapter-web/test-target/: index.html
services/adapter-web/tests/: test_action_verification.py  test_canvas_coords.py  test_gesture_and_coordinates.py  test_hand_detection.py  test_navigation_diagnostics.py  test_registry_attach.py  test_startup.py  test_startup_attach.py  test_startup_diagnostics.py
services/adapter-windows/: README.md  pyproject.toml
services/adapter-windows/profiles/: local-mock-uno.json  real-uno-desktop.json  template-external-uno.json
services/adapter-windows/src/uno_adapter_windows/: api.py  browser_attach.py  extraction.py  main.py  mock_adapter.py  profiles.py  pywinauto_adapter.py  registry.py  runtime.py  uia_actionability.py
services/adapter-windows/src/uno_adapter_windows/rpa/: session_state.py  synthetic_frame.py
services/adapter-windows/src/uno_adapter_windows/rpa/driver/: input_driver.py  window_driver.py
services/adapter-windows/src/uno_adapter_windows/rpa/executor/: visual_executor.py
services/adapter-windows/src/uno_adapter_windows/rpa/perception/: target_locator.py
services/adapter-windows/src/uno_adapter_windows/rpa/verification/: ui_verifier.py
services/adapter-windows/test-target/: uno_mock_app.py
services/adapter-windows/tests/: test_uia_actionability.py
services/chat-intent-service/: README.md  pyproject.toml
services/chat-intent-service/src/uno_chat_intent/: api.py  detector.py  main.py
services/config-service/: README.md  pyproject.toml
services/config-service/src/uno_config/: api.py  main.py
services/decision-service/: README.md  pyproject.toml
services/decision-service/src/uno_decision/: api.py  main.py  policy.py
services/model-registry-service/: README.md  pyproject.toml
services/model-registry-service/src/uno_model_registry/: api.py  main.py  registry.py
services/model-runtime-service/: README.md  pyproject.toml
services/model-runtime-service/src/uno_model_runtime/: adapters.py  api.py  benchmark_runner.py  invoker.py  main.py  prompts_registry.py  providers.py
services/perception-service/: README.md  pyproject.toml
services/perception-service/src/uno_perception/: api.py  canvas_plugin.py  card_recognition.py  grounding.py  grounding_providers.py  hand_segmentation.py  main.py  merger.py  screenshot_plugin.py  uno_adapter.py  visual_extraction.py  vlm_provider.py
services/policy-guard/: README.md  pyproject.toml
services/policy-guard/src/uno_policy/: api.py  guard.py  main.py
services/state-replay-service/: README.md  pyproject.toml
services/state-replay-service/src/uno_replay/: api.py  main.py  store.py
services/uno-core/: README.md  pyproject.toml
services/uno-core/src/uno_core/: __init__.py  api.py  deck.py  game_plugin.py  main.py  reducer.py  replay.py  rules.py  state.py
tests/: __init__.py  conftest.py
(+937 files in other folders)
