[project]
name = "uno-operator"
version = "0.1.0"
description = "UNO Operator — unified operator platform for web and Windows UNO clients"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "bandit>=1.7",
]

[tool.uv.workspace]
members = [
    "packages/schemas",
    "packages/shared-utils",
    "packages/client-sdk-python",
    "services/uno-core",
    "services/session-orchestrator",
    "services/state-replay-service",
    "services/perception-service",
    "services/adapter-web",
    "services/adapter-windows",
    "services/decision-service",
    "services/policy-guard",
    "services/chat-intent-service",
    "services/chat-response-service",
    "services/model-registry-service",
    "services/model-runtime-service",
    "services/observability-service",
    "services/config-service",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    ".",
    "packages/schemas/src",
    "packages/shared-utils/src",
    "packages/client-sdk-python/src",
    "services/uno-core/src",
    "services/perception-service/src",
    "services/decision-service/src",
    "services/policy-guard/src",
    "services/chat-intent-service/src",
    "services/chat-response-service/src",
    "services/model-registry-service/src",
    "services/model-runtime-service/src",
    "services/session-orchestrator/src",
    "services/state-replay-service/src",
    "services/adapter-web/src",
    "services/adapter-windows/src",
    "services/config-service/src",
    "services/observability-service/src",
]
asyncio_mode = "auto"
markers = [
    "smoke: smoke tests (autonomous, no network/live services)",
    "contract: contract tests",
    "integration: integration tests (may require live services / processes)",
    "e2e: end-to-end tests (require network, browsers, or real game windows)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# CLI scripts and E2E tests must extend sys.path before importing workspace
# packages, so module-level imports intentionally follow that setup (E402).
"scripts/*" = ["E402"]
"tests/e2e/*" = ["E402"]
# TEMPORARY: test files carry pre-existing E501 (line-too-long) debt. Ignore it
# under tests only so CI can go green while production code stays strict on
# E501. Remove this once the test E501 backlog is wrapped. See cleanup note.
# Covers the root test suite and per-service co-located tests.
"tests/**/*.py" = ["E501"]
"**/tests/**/*.py" = ["E501"]

[tool.coverage.run]
source = ["services", "packages"]
omit = ["*/test*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
