[project]
name = "adapter-windows"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "uno-schemas",
    "uno-shared-utils",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pywinauto>=0.6.8",
    "pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uno_adapter_windows"]

[tool.uv.sources]
uno-schemas = { workspace = true }
uno-shared-utils = { workspace = true }

[project.scripts]
adapter-windows = "uno_adapter_windows.main:main"
