[project]
name = "chat-intent-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["uno-schemas", "uno-shared-utils", "fastapi>=0.110", "uvicorn[standard]>=0.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uno_chat_intent"]

[tool.uv.sources]
uno-schemas = { workspace = true }
uno-shared-utils = { workspace = true }

[project.scripts]
chat-intent-service = "uno_chat_intent.main:main"
