[project]
name = "model-runtime-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "uno-schemas",
    "uno-shared-utils",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uno_model_runtime"]

[tool.uv.sources]
uno-schemas = { workspace = true }
uno-shared-utils = { workspace = true }

[project.scripts]
model-runtime-service = "uno_model_runtime.main:main"
