[project]
name = "policy-guard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["uno-schemas", "uno-shared-utils", "fastapi>=0.110", "uvicorn[standard]>=0.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uno_policy"]

[tool.uv.sources]
uno-schemas = { workspace = true }
uno-shared-utils = { workspace = true }

[project.scripts]
policy-guard = "uno_policy.main:main"
