[project]
name = "uno-core"
version = "0.1.0"
description = "Canonical UNO rules engine — no UI/OCR/model dependencies"
requires-python = ">=3.11"
dependencies = [
    "uno-schemas",
    "uno-shared-utils",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uno_core"]

[tool.uv.sources]
uno-schemas = { workspace = true }
uno-shared-utils = { workspace = true }

[project.scripts]
uno-core = "uno_core.main:main"
